# ragas-code

./: .env  README.md  main.py  pyproject.toml  test_engine.py
ipynb/: 中文测试集生成.ipynb  使用LangGraph构建一个RAG Agent.ipynb  构建和评估用于获取金属价格的ReAct智能体.ipynb
