[project]
name = "ragas-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.12",
    "exec-python>=0.1.6",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymilvus>=2.5.10",
    "pyowm>=3.3.0",
    "ragas>=0.2.15",
    "setuptools>=80.9.0",
]
